✨ Enhance Streamlit app with dynamic filter pattern example
- Implemented a method to retrieve a dynamic example value from the data for the filter input.
- Updated the filter pattern placeholder to include the example value for better user guidance.
- Adjusted translations to reflect the new placeholder format in both English and German.

--- a/translations/translations_de.json
+++ b/translations/translations_de.json
@@ -7,7 +7,7 @@
     "column_selector_help": "Welche Spalten sollen angezeigt werden?",
     "filter_section": "Filtern",
     "filter_column": "Spalte, auf die gefiltert werden soll",
-    "filter_pattern": "Regex‑Muster (z.B. 'Helvetia')",
+    "filter_pattern": "Regex‑Muster (z.B. '{example}')",
     "feature_count": "Anzahl Features",
     "filtered_features": "🎯 **Gefilterte Features:** {filtered} / {total}",
     "all_features": "📊 **Alle Features:** {total}",
